--- a/application.properties
+++ b/application.properties
@@ -5,3 +5,8 @@ usernameBD=postgres
 passwordBD=colombia2020$
 nombreBD=postgres
 appId=JanusSsp
+
+#datos plataforma
+url.login=http://172.16.10.150:8888/index.html
+url.usser=jguarecuco
+url.pass=123
