--- a/selenium.properties
+++ b/selenium.properties
@@ -1,4 +1,4 @@
-webdriver.chrome.driver=src/test/resources/driver/chromedriver.exe
+webdriver.chrome.driver=src/test/resources/driver/chromedriverlinux.sh
 webdriver.firefox.driver=src/test/resources/plmAutomation/drivers/geckodriver.exe
 webdriver.ie.driver=src/test/resources/plmAutomation/drivers/IEDriverServer.exe
 webdriver.timeouts.implicitlywait=15000
