--- a/application.properties
+++ b/application.properties
@@ -11,3 +11,7 @@ url.login=http://172.16.10.150:8888/index.html
 url.usser=jguarecuco
 url.pass=123
 
+nc.reportes.compilacion=1.0
+nc.reportes.nombre=koba
+nc.reportes.ruta=target
+
